--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   cloud_firestore: ^0.13.7
   equatable: ^1.2.3
   google_fonts: ^1.1.0
+  provider: ^4.3.2
+  flutter_bloc: ^6.0.1
+  flutter_svg: ^0.18.0
 
 dev_dependencies:
   flutter_test:
