--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   provider: ^4.3.2
   flutter_bloc: ^6.0.1
   flutter_svg: ^0.18.0
+  flushbar: ^1.10.4
+  email_validator: ^1.0.5
+  flutter_spinkit: ^4.1.2+1
 
 dev_dependencies:
   flutter_test:
