--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flushbar: ^1.10.4
   email_validator: ^1.0.5
   flutter_spinkit: ^4.1.2+1
+  geolocator: ^5.3.2+2
+  image_picker: ^0.6.7+4
 
 dev_dependencies:
   flutter_test:
