--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   geolocator: ^5.3.2+2
   image_picker: ^0.6.7+4
   firebase_storage: ^3.1.6
+  bezier_chart: ^1.0.17+1
 
 dev_dependencies:
   flutter_test:
