--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^0.6.7+4
   firebase_storage: ^3.1.6
   bezier_chart: ^1.0.17+1
+  url_launcher: ^5.5.0
 
 dev_dependencies:
   flutter_test:
